# schwarzschild_raytracer_wgpu

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
schwarzschild_raytracer/: Cargo.toml  build.rs
schwarzschild_raytracer/resources/: Moon_2K.mtl
schwarzschild_raytracer/src/: lib.rs  performance_monitor.rs  resources.rs  textured_quad.rs
schwarzschild_raytracer/src/geometry/: circle.rs  mod.rs  quad.rs
schwarzschild_raytracer/src/gui/: adjust_spin.rs  debug_values.rs  fps_counter.rs  menu.rs  mod.rs  movement_buttons.rs  side_buttons.rs  utils.rs
schwarzschild_raytracer/src/renderer/: mod.rs  observer_controller.rs  renderer.rs
schwarzschild_raytracer/src/schwarzschild_object_shader/: mod.rs  model.rs  model_matrix_bind_group_layout.rs  model_matrix_uniform_buffers.rs  pipeline.rs  relativistic_model_wrapper.rs  schwarzschild_object_shader_draw.rs  shader.wgsl  vertex.rs
schwarzschild_raytracer/src/schwarzschild_point_shader/: mesh.rs  mod.rs  pipeline.rs  point_cloud.rs  shader.wgsl  vertex.rs  vertex_buffer.rs
schwarzschild_raytracer/src/schwarzschild_sphere_shader/: mod.rs  pipeline.rs  ray_fan_bind_group_layout.rs  ray_fan_texture.rs  schwarzschild_sphere_shader_draw.rs  shader.wgsl  sphere_observer_bind_group_layout.rs  sphere_observer_uniform_buffers.rs
schwarzschild_raytracer/src/schwarzschild_sphere_shader/sphere_buffer/: basic_sphere_buffer.rs  mod.rs
schwarzschild_raytracer/src/simulation/: mod.rs  observer.rs  orbit.rs  polar_transformations.rs  ray_connector.rs  sphere_ray_tracer.rs  tests.rs
